--- a/Recommender_System.ipynb
+++ b/Recommender_System.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Recommender_System.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPBJGYqhJzTy0273nYzcjDd",
+      "authorship_tag": "ABX9TyN3qYdVn1x80yqI8frakHjn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -78,7 +78,7 @@
         "                           'Lakshay':4.0,\n",
         "                           'Commando':1.0}}"
       ],
-      "execution_count": 42,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -213,7 +213,7 @@
       "source": [
         "import math"
       ],
-      "execution_count": 22,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -348,7 +348,7 @@
         "\n",
         "  return 1/(1+math.sqrt(sum_euclidean))"
       ],
-      "execution_count": 18,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -399,7 +399,7 @@
         "  similarity.reverse()\n",
         "  return similarity"
       ],
-      "execution_count": 17,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -512,7 +512,7 @@
         "  recommendations.reverse()\n",
         "  return recommendations"
       ],
-      "execution_count": 64,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -527,7 +527,7 @@
       "source": [
         "get_user_recommendation(users_feedback,'Rahul')"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -620,7 +620,7 @@
         "    if movie[0] >= min_score:\n",
         "      print(movie[1])"
       ],
-      "execution_count": 19,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -697,7 +697,7 @@
         "                                          'Piyush':3.0,\n",
         "                                          'Sachin':3.0}}"
       ],
-      "execution_count": 28,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -707,12 +707,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XFYT6s9ewky7",
-        "outputId": "f48f7b58-b762-413e-a25a-4fac5e20a2b6"
+        "outputId": "b8a1a56b-9175-4a47-ee5e-09f3709452dc"
       },
       "source": [
         "user_feedback_movies"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -753,7 +753,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 39
+          "execution_count": 9
         }
       ]
     },
@@ -938,7 +938,7 @@
       "source": [
         "def load_movielens():\n",
         "  movies = {}\n",
-        "  for row in open('/u.item', encoding = 'ISO-8859-1'):\n",
+        "  for row in open('/content/u.item', encoding = 'ISO-8859-1'):\n",
         "    #print(row)\n",
         "    (id,name) =  row.split('|')[0:2]\n",
         "    #print(id,name)\n",
@@ -954,7 +954,7 @@
         "    dataset[user][movies[movie_id]] = float(score)\n",
         "  return dataset"
       ],
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -965,7 +965,7 @@
       "source": [
         "movielens_dataset = load_movielens()"
       ],
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -1128,20 +1128,20 @@
       "source": [
         "def load_movielens_item():\n",
         "  movies = {}\n",
-        "  for row in open('/u.item', encoding = 'ISO-8859-1'):\n",
+        "  for row in open('/content/u.item', encoding = 'ISO-8859-1'):\n",
         "    (id,name) =  row.split('|')[0:2]\n",
         "    movies[id] = name\n",
         "  #print(movies)\n",
         "\n",
         "  dataset = {}\n",
-        "  for row in open('/u.data'):\n",
+        "  for row in open('/content/u.data'):\n",
         "    (user, movie_id, score, time) = row.split('\\t')\n",
         "    dataset.setdefault(movies[movie_id], {})\n",
         "    dataset[movies[movie_id]][user] = float(score)\n",
         "  #print(dataset)\n",
         "  return dataset"
       ],
-      "execution_count": 10,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -1152,7 +1152,7 @@
       "source": [
         "movielens_dataset_item = load_movielens_item()"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -1169,49 +1169,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "KCmzF0NFqqe0",
-        "outputId": "c0ec5972-1072-4fc7-9f04-fb0d749254d4"
+        "id": "KCmzF0NFqqe0"
       },
       "source": [
         "movielens_dataset_item['Body Snatcher, The (1945)']"
       ],
-      "execution_count": 14,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "{'102': 2.0,\n",
-              " '13': 4.0,\n",
-              " '21': 3.0,\n",
-              " '234': 2.0,\n",
-              " '269': 3.0,\n",
-              " '293': 4.0,\n",
-              " '326': 4.0,\n",
-              " '366': 5.0,\n",
-              " '38': 2.0,\n",
-              " '405': 4.0,\n",
-              " '425': 3.0,\n",
-              " '5': 3.0,\n",
-              " '537': 3.0,\n",
-              " '60': 5.0,\n",
-              " '650': 4.0,\n",
-              " '716': 3.0,\n",
-              " '788': 4.0,\n",
-              " '802': 3.0,\n",
-              " '804': 4.0,\n",
-              " '833': 4.0,\n",
-              " '95': 4.0,\n",
-              " '96': 4.0}"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 14
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1225,7 +1189,7 @@
       "source": [
         "movielens_dataset_item['Body Snatcher, The (1945)']['833']"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1273,7 +1237,7 @@
       "source": [
         "print_user_recommendation(get_user_recommendation(movielens_dataset_item, 'Body Snatcher, The (1945)'), 4.7)"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1307,7 +1271,7 @@
       "source": [
         "user_feedback_movies"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1364,7 +1328,7 @@
       "source": [
         "get_similarities(user_feedback_movies,'Shershaah')"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1394,7 +1358,7 @@
       "source": [
         "get_similarities(user_feedback_movies,'Lakshay')"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1427,7 +1391,7 @@
         "    similarities[item] = similarity\n",
         "  return similarities"
       ],
-      "execution_count": 36,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -1438,7 +1402,7 @@
       "source": [
         "similarities = calculate_item_similarities(user_feedback_movies)"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1453,7 +1417,7 @@
       "source": [
         "similarities"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1525,7 +1489,7 @@
         "  recommendations.reverse()\n",
         "  return recommendations"
       ],
-      "execution_count": 59,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -1540,7 +1504,7 @@
       "source": [
         "get_item_recommendation(users_feedback, similarities, 'Rahul')"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1568,7 +1532,7 @@
       "source": [
         "get_user_recommendation(users_feedback,'Rahul')"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1596,13 +1560,170 @@
       "source": [
         "print_user_recommendation(get_item_recommendation(users_feedback, similarities, 'Rahul'), 3)"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "MS Dhoni\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Item based recommendations(MovieLens)"
+      ],
+      "metadata": {
+        "id": "LzClnezX6-rj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "movielens_dataset_item = load_movielens_item()"
+      ],
+      "metadata": {
+        "id": "SQtff32k7E8u"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "movielens_dataset_item"
+      ],
+      "metadata": {
+        "id": "trH5QYfT76Xr"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "item_similarities = calculate_item_similarities(movielens_dataset_item)"
+      ],
+      "metadata": {
+        "id": "3XncdrCe8aTd"
+      },
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "item_similarities['Kids in the Hall: Brain Candy (1996)']"
+      ],
+      "metadata": {
+        "id": "ZhsZkVpv85hu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "get_item_recommendation(movielens_dataset, item_similarities, '1')"
+      ],
+      "metadata": {
+        "id": "IGBz8MyY91HF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print_user_recommendation(get_item_recommendation(movielens_dataset, item_similarities, '1'), 4.2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "74bJK1yG_FtV",
+        "outputId": "e1172016-f7e7-4e97-f9fc-7ce2f1c2a155"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Entertaining Angels: The Dorothy Day Story (1996)\n",
+            "Cyclo (1995)\n",
+            "Little City (1998)\n",
+            "Office Killer (1997)\n",
+            "Death in Brunswick (1991)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print_user_recommendation(get_user_recommendation(movielens_dataset, '1'), 4.5)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "S9sXdL1V_kiE",
+        "outputId": "c228720b-a9c6-4bd7-8af8-02549cb21967"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Saint of Fort Washington, The (1993)\n",
+            "They Made Me a Criminal (1939)\n",
+            "Someone Else's America (1995)\n",
+            "Santa with Muscles (1996)\n",
+            "Prefontaine (1997)\n",
+            "Marlene Dietrich: Shadow and Light (1996) \n",
+            "Great Day in Harlem, A (1994)\n",
+            "Entertaining Angels: The Dorothy Day Story (1996)\n",
+            "Aiqing wansui (1994)\n",
+            "Star Kid (1997)\n",
+            "Pather Panchali (1955)\n",
+            "Some Mother's Son (1996)\n",
+            "Anna (1996)\n",
+            "Letter From Death Row, A (1998)\n",
+            "Close Shave, A (1995)\n",
+            "Schindler's List (1993)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print_user_recommendation(get_item_recommendation(movielens_dataset, item_similarities, '2'), 4.2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5CepTHvp_ahz",
+        "outputId": "69afed2c-5ba8-476e-cf4f-2e9712793a66"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mamma Roma (1962)\n",
+            "They Made Me a Criminal (1939)\n",
+            "Death in Brunswick (1991)\n",
+            "All Things Fair (1996)\n",
+            "Aiqing wansui (1994)\n",
+            "Someone Else's America (1995)\n"
           ]
         }
       ]
